visualize_result/css/style_rwd.css
html {
  font-size: 1px;
}

@media only screen and (max-device-width : 480px) {
  html {
    font-size: 3px;
  }
}

@media only screen and (min-device-width : 481px) and (max-device-width : 768px) {
  html {
    font-size: 1.5px;
  }
}

body {
  margin: 0;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  background-color: #EEE;
  font-weight: 100;
  color: black;
}

.emphasis {
  font-weight: 400;
  color: #444;
}

.top-container {
  padding-bottom: 104rem; /* 20 + 54 + 30 */
  margin-bottom: -84rem;
  background-color: #38291A;
  padding-top: 30rem;
  /*box-shadow: 0rem 2rem 8rem #444;*/
  background-image: url("../images/banner.png");
  background-repeat: no-repeat;
  /*background-attachment: fixed;*/
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.title {
  text-shadow: 0rem 4rem 12rem black;
  text-align: center;
  font-size: 40rem;
  font-weight: 100;
  color: white;
  /*margin: 0 0 20rem 0;*/
}

.selector-wrapper {
  position: sticky;
  top: 0;
  width: 280rem;
  margin: 0 auto;
  color: black;
  font-weight: 200;
  font-size: 24rem;
  margin-bottom: 50rem;
}

.main-info-container {
  text-align: center;
  font-size: 28rem;
  margin-bottom: 20rem;
}

.main-info-number {
  font-size: 36rem;
}

.main-info-text {
}

.orb-color-1 {
  background-color: #F44336;
}

.orb-color-2 {
  background-color: #4CAF50;
}

.orb-color-3 {
  background-color: #2196F3;
}

.orb-color-4 {
  background-color: #FFC107;
}

.orb-color-5 {
  background-color: purple;
}

.orb-color-6 {
  background-color: #CCC;
}


.board-cards-container {
  /*display: flex;
  flex-wrap: wrap;
  justify-content: space-around;*/
  text-align: center;
}

.board-card {
  display: inline-block;
  text-align: left;
  width: 280rem;
  margin: 0 10rem 20rem;
  background-color: white;
  /*border: 1rem solid;*/
  /*border-color: #e5e6e9 #dfe0e4 #d0d1d5;*/
  border-radius: 4rem;
  box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
}

.board-index {
  text-align: center;
  font-size: 32rem;
  /*font-weight: normal;*/
  color: white;
  background-color: #67524A;
  padding: 8rem 0;
  border-radius: 4rem 4rem 0 0;
  text-shadow: 0rem 1rem 4rem black;
}

.board-info {
  font-size: 24rem;
  /*color: #606060;*/
  margin: 15rem;
  line-height: 32rem;
}

.board-info-text {
  /*position:absolute;
  bottom:0;
  right:0;*/
  /*margin-top: 6rem;*/
}

.board-info-number {
  font-size: 32rem;
  float: right;
}

.board-info-plus {
  margin: 0 4rem;
}

.board {
  text-align: center;
  margin: 14rem 0;
  position: relative;
}

.board-row {
  height: 42rem;
}

.board-play-button {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 120rem;
  color: rgba(128,128,128,0.5);
}

.orb {
  display: inline-block;
  width: 40rem;
  height: 40rem;
  border-radius: 100%;
  margin: 1rem;
}

.loader-wrapper {
  font-size: 100rem;
  /*margin: 100rem auto;*/
}

